added page penjelasan

--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
         <a href="#macam" class="hero-btn">Saklajengnipun</a>
       </div>
     </div>
+    <div class="empon-penjelasan">
+        <div class="empon-headline">
+          <div class="empon-latin">
+            <h1>
+              Empon
+              empon
+            </h1>
+          </div>
+          <div class="empon-aksara">
+            <h1>
+              ꦲꦺꦩ꧀ꦥꦺꦴꦤ꧀ ꦲꦺꦩ꧀ꦥꦺꦴꦤ꧀
+            </h1>
+          </div>
+        </div>
+        <div class="empon-teks">
+          <h2>inggih punika manéka warni taneman ingkang mliginipun dipun-ginakaken kanggé tamba utawi obat tumrap penyakit-penyakit tinamtu. Empon-empon punika saged awujud oyod-oyodan, woh-wohan, utawi gegodhongan.</h2>
+        </div>
+      </div>
 
     <section id="macam" class="macam-section">
       <h2 class="judul-macam">Macam-macam</h2>
