--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="swiper-button-prev"></div>
       </div>
     </section>
-
+      <h1>halo </h1>
     <script src="script.js" defer></script>
   </body>
 </html>
