added jahe.html styling

--- a/jahe.html
+++ b/jahe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jahe</title>
+    <title>ꦗꦲꦺ</title>
 
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -18,8 +18,16 @@
 <body class="jahe-body">
     <div class="jahe-contents">
         <div class="jahe-left">
-            
+            <div class="c-jahe">
+                <img src="image/Jahe.png" alt="" srcset="" class="jahe-img">
+            </div>
         </div>
+        <div class="jahe-right">
+            <div class="jahe-text">
+                <h1>Jahe</h1>
+                <p>jaé gadhah paédah kanggé nyuda mual lan rasa lara ing weteng, ngirangi nyeri kados nyeri haid utawi nyeri sendi, mbiyantu nurunaké bobot awak, sarta nglawan peradangan lan rupa-rupa penyakit.</p>
+            </div>
+            <a href="index.html" class="back-button"><p>kembali</p></a>
     </div>
 </body>
 </html>
