remake jahe.html + improve

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <link anese&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
@@ -50,8 +50,13 @@
           </div>
         </div>
         <div class="empon-teks">
-          <h2>inggih punika manéka warni taneman ingkang mliginipun dipun-ginakaken kanggé tamba utawi obat tumrap penyakit-penyakit tinamtu. Empon-empon punika saged awujud oyod-oyodan, woh-wohan, utawi gegodhongan.</h2>
+          <div>
+            <h1>Teges</h1>
+            <h2>inggih punika manéka warni taneman ingkang mliginipun dipun-ginakaken kanggé tamba utawi obat tumrap penyakit-penyakit tinamtu. Empon-empon punika saged awujud oyod-oyodan, woh-wohan, utawi gegodhongan.</h2>
         </div>
+          </div>
+          
+          
       </div>
 
     <section id="macam" class="macam-section">
@@ -93,6 +98,66 @@
         <div class="swiper-button-prev"></div>
       </div>
     </section>
+
+    <!---------------------------OLAHAN---------------------------->
+    <div class="div-olahan">
+
+      <!-- SERUNI -->
+      <div class="circle-card hijau">
+        <div class="side-text left">ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ</div>
+        <h2 class="title-olahan">WEDANG SERUNI</h2>
+
+        <div class="inner-circle-seruni">
+         <img src="seruni.jpg" class="drink-img">
+        </div>
+
+        <div class="stars">★★★</div>
+        <div class="side-text right">ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ</div>
+      </div>
+
+      <!-- UWUH -->
+      <div class="circle-card merah">
+        <div class="side-text left">ꦮꦺꦢꦁ ꦈꦮꦸꦃ</div>
+        <h2 class="title-olahan">WEDANG UWUH</h2>
+
+        <div class="inner-circle-uwuh">
+          <img src="uwuh.jpg" class="drink-img">
+        </div>
+
+        <div class="stars">★★★</div>
+        <div class="side-text right">ꦮꦺꦢꦁ ꦈꦮꦸꦃ</div>
+      </div>
+    </div>
+
+    <div class="div-olahan">
+
+      <!-- TEMULAWAK -->
+      <div class="circle-card kuning">
+        <div class="side-text left">ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ</div>
+        <h2 class="title-olahan">WEDANG TEMULAWAK</h2>
+
+        <div class="inner-circle-temulawak">
+         <img src="temulawak.jpg" class="drink-img">
+        </div>
+
+        <div class="stars">★★★</div>
+        <div class="side-text right">ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ</div>
+      </div>
+
+      <!-- JAHE -->
+      <div class="circle-card coklat">
+        <div class="side-text left">ꦮꦺꦢꦁ ꦈꦮꦸꦃ</div>
+        <h2 class="title-olahan">WEDANG JAHE</h2>
+
+        <div class="inner-circle-jahe">
+          <img src="jahe.jpg" class="drink-img">
+        </div>
+
+        <div class="stars">★★★</div>
+        <div class="side-text right">ꦮꦺꦢꦁ ꦈꦮꦸꦃ</div>
+      </div>
+    </div>
+
 
     <script src="script.js" defer></script>
   </body>
