--- a/jahe.html
+++ b/jahe.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ꦗꦲꦺ</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="stylemanfaat.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <link
@@ -14,20 +14,27 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Outfit:wght@100..900&display=swap" 
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" 
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close" />
 </head>
 <body class="jahe-body">
     <div class="jahe-contents">
         <div class="jahe-left">
             <div class="c-jahe">
-                <img src="image/Jahe.png" alt="" srcset="" class="jahe-img">
+                <a href="index.html" class="close-btn">
+                    <span class="material-symbols-outlined">close</span>
+                </a>
+                <img src="image/Jahe.png" class="jahe-img">
             </div>
         </div>
         <div class="jahe-right">
             <div class="jahe-text">
                 <h1>Jahe</h1>
+                <h2>ꦗꦲꦺ</h2>
                 <p>jaé gadhah paédah kanggé nyuda mual lan rasa lara ing weteng, ngirangi nyeri kados nyeri haid utawi nyeri sendi, mbiyantu nurunaké bobot awak, sarta nglawan peradangan lan rupa-rupa penyakit.</p>
             </div>
-            <a href="index.html" class="back-button"><p>kembali</p></a>
+            
     </div>
 </body>
 </html>
