fix text, adding elements

--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
       </div>
     </div>
 
-
+    <footer class="footer">
+      <p>© 2025 Empon Empon.</p>
+    </footer>
     <script src="script.js" defer></script>
   </body>
 </html>
