--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <img src="image/Hero.png" />
         </div>
 
-        <a href="#macam" class="hero-btn">Saklajengnipun</a>
+        <a href="#penjelasan" class="hero-btn">Saklajengnipun</a>
       </div>
     </div>
-    <div class="empon-penjelasan">
+    <div id="penjelasan" class="empon-penjelasan">
         <div class="empon-headline">
           <div class="empon-latin">
             <h1>
@@ -108,7 +108,7 @@
         <h2 class="title-olahan">WEDANG SERUNI</h2>
 
         <div class="inner-circle-seruni">
-         <img src="seruni.jpg" class="drink-img">
+         <img src="image/seruni.png" class="drink-img">
         </div>
 
         <div class="stars">★★★</div>
@@ -121,7 +121,7 @@
         <h2 class="title-olahan">WEDANG UWUH</h2>
 
         <div class="inner-circle-uwuh">
-          <img src="uwuh.jpg" class="drink-img">
+          <img src="image/uwuh.png" class="drink-img">
         </div>
 
         <div class="stars">★★★</div>
@@ -137,7 +137,7 @@
         <h2 class="title-olahan">WEDANG TEMULAWAK</h2>
 
         <div class="inner-circle-temulawak">
-         <img src="temulawak.jpg" class="drink-img">
+         <img src="image/temulawak.png" class="drink-img">
         </div>
 
         <div class="stars">★★★</div>
@@ -150,7 +150,7 @@
         <h2 class="title-olahan">WEDANG JAHE</h2>
 
         <div class="inner-circle-jahe">
-          <img src="jahe.jpg" class="drink-img">
+          <img src="image/jahe.png" class="drink-img">
         </div>
 
         <div class="stars">★★★</div>
