Translate jawa, adding new pages

--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
           <div class="swiper-slide">
             <div class="card">
               <h3>Jahe</h3>
-              <p>Dipercaya menghangatkan tubuh.</p>
-              <button class="waos-btn">Waos</button>
+              <img src="image/Jahe.png" alt="" srcset="">
+              <p>Dipunkawruhi saged ngangetaké salira.</p>
+              <button class="waos-btn"><a href="jahe.html">Waos</a></button>
             </div>
           </div>
 
@@ -78,17 +79,29 @@
           <div class="swiper-slide">
             <div class="card">
               <h3>Temulawak</h3>
-              <p>Dipercaya meningkatkan stamina.</p>
-              <button class="waos-btn">Waos</button>
+              <img src="image/Temulawak.png" alt="" srcset="">
+              <p>Dipunkawruhi nyegeraké salira.</p>
+              <button class="waos-btn"><a href="temulawak.html">Waos</a></button>
             </div>
           </div>
 
           <!-- CARD 3 -->
           <div class="swiper-slide">
             <div class="card">
-              <h3>Kunyit</h3>
-              <p>Baik untuk pencernaan.</p>
-              <button class="waos-btn">Waos</button>
+              <h3>Secang</h3>
+              <img src="image/Secang.png" alt="" srcset="">
+              <p>Dipunkawruhi maringi rasa anget manis.</p>
+              <button class="waos-btn"><a href="secang.html">Waos</a></button>
+            </div>
+          </div>
+
+          <!-- -- CARD 4 -- -->
+          <div class="swiper-slide">
+            <div class="card">
+              <h3>Sereh</h3>
+              <img src="image/Sereh.png" alt="" srcset="">
+              <p>Dipunkawruhi nyegeraké salira</p>
+              <button class="waos-btn"><a href="sereh.html">Waos</a></button>
             </div>
           </div>
         </div>
