--- a/secang.html
+++ b/secang.html
@@ -32,7 +32,7 @@
             <div class="secang-text">
                 <h1>Secang</h1>
                 <h2>ꦱꦺꦕꦤ꧀ꦒ꧀</h2>
-                <p>manfaaté temulawak antarané saé kanggo pencernaan, njagi kasehatan ati, nambahi daya tahan awak, kagungan sipat antioksidan lan antiinflamasi ingkang kiyat, lan gadhah potensi nyegah penyakit kanker.</p>
+                <p>kayu secang gadhah kathah paédah, antarané dados antioksidan alami, saged nyuda peradangan lan nyeri, mbiyantu nglawan bakteri lan njagi kasehatan kulit, sarta ndadosaké peredaran getih langkung lancar.</p>
             </div>
             
     </div>
