--- a/index.html
+++ b/index.html
@@ -99,62 +99,241 @@
       </div>
     </section>
 
-    <!---------------------------OLAHAN---------------------------->
+<!---------------------------OLAHAN---------------------------->
     <div class="div-olahan">
 
       <!-- SERUNI -->
       <div class="circle-card hijau">
-        <div class="side-text left">ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ</div>
-        <h2 class="title-olahan">WEDANG SERUNI</h2>
 
+        <!-- TOP CURVE TITLE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="top-seruni"
+            d="M 25 220 A 175 175 0 0 1 375 200"
+            fill="none" />
+          <text font-size="30" font-weight="bold">
+            <textPath href="#top-seruni" startOffset="50%" text-anchor="middle">
+              WEDANG SERUNI
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- LEFT CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="left-seruni"
+            d="M 180 25 A 175 175 0 0 0 200 375"
+            fill="none" />
+          <text font-size="30">
+            <textPath href="#left-seruni" startOffset="50%" text-anchor="middle">
+              ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- RIGHT CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="right-seruni"
+            d="M 180 25 A 175 175 0 0 1 200 375"
+            fill="none" />
+          <text font-size="30">
+            <textPath href="#right-seruni" startOffset="50%" text-anchor="middle">
+              ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- BOTTOM STARS -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="bottom-seruni"
+            d="M 20 220 A 175 175 0 0 0 375 200"
+            fill="none" />
+          <text font-size="40" fill="gold">
+            <textPath href="#bottom-seruni" startOffset="50%" text-anchor="middle">
+              ★★★
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- IMAGE -->
         <div class="inner-circle-seruni">
-         <img src="image/seruni.png" class="drink-img">
+          <img src="image/seruni.png" class="drink-img">
         </div>
-
-        <div class="stars">★★★</div>
-        <div class="side-text right">ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ</div>
       </div>
+
+
 
       <!-- UWUH -->
       <div class="circle-card merah">
-        <div class="side-text left">ꦮꦺꦢꦁ ꦈꦮꦸꦃ</div>
-        <h2 class="title-olahan">WEDANG UWUH</h2>
 
+        <!-- TOP CURVE TITLE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="top-uwuh"
+            d="M 25 220 A 175 175 0 0 1 375 200"
+            fill="none" />
+          <text font-size="30" font-weight="bold">
+            <textPath href="#top-uwuh" startOffset="50%" text-anchor="middle">
+              WEDANG UWUH
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- LEFT CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="left-uwuh"
+            d="M 180 25 A 175 175 0 0 0 200 375"
+            fill="none" />
+          <text font-size="30">
+            <textPath href="#left-uwuh" startOffset="50%" text-anchor="middle">
+              ꦮꦺꦢꦁ ꦈꦮꦸꦃ
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- RIGHT CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="right-uwuh"
+            d="M 180 25 A 175 175 0 0 1 200 375"
+            fill="none" />
+          <text font-size="30">
+            <textPath href="#right-uwuh" startOffset="50%" text-anchor="middle">
+              ꦮꦺꦢꦁ ꦈꦮꦸꦃ
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- BOTTOM STARS -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="bottom-uwuh"
+            d="M 20 220 A 175 175 0 0 0 375 200"
+            fill="none" />
+          <text font-size="40" fill="gold">
+            <textPath href="#bottom-uwuh" startOffset="50%" text-anchor="middle">
+              ★★★
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- IMAGE -->
         <div class="inner-circle-uwuh">
           <img src="image/uwuh.png" class="drink-img">
         </div>
-
-        <div class="stars">★★★</div>
-        <div class="side-text right">ꦮꦺꦢꦁ ꦈꦮꦸꦃ</div>
       </div>
+
     </div>
 
     <div class="div-olahan">
 
       <!-- TEMULAWAK -->
       <div class="circle-card kuning">
-        <div class="side-text left">ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ</div>
-        <h2 class="title-olahan">WEDANG TEMULAWAK</h2>
+
+        <!-- TOP CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="top-temu"
+            d="M 25 220 A 175 175 0 0 1 375 200"
+            fill="none" />
+          <text font-size="28" font-weight="bold">
+            <textPath href="#top-temu" startOffset="50%" text-anchor="middle">
+              WEDANG TEMULAWAK
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- LEFT CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="left-temu"
+            d="M 180 25 A 175 175 0 0 0 200 375"
+            fill="none" />
+          <text font-size="30">
+            <textPath href="#left-temu" startOffset="50%" text-anchor="middle">
+              ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- RIGHT CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="right-temu"
+            d="M 180 25 A 175 175 0 0 1 200 375"
+            fill="none" />
+          <text font-size="30">
+            <textPath href="#right-temu" startOffset="50%" text-anchor="middle">
+              ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- BOTTOM STARS -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="bottom-temu"
+            d="M 20 220 A 175 175 0 0 0 375 200"
+            fill="none" />
+          <text font-size="40" fill="gold">
+            <textPath href="#bottom-temu" startOffset="50%" text-anchor="middle">
+              ★★★
+            </textPath>
+          </text>
+        </svg>
 
         <div class="inner-circle-temulawak">
-         <img src="image/temulawak.png" class="drink-img">
+          <img src="image/temulawak.png" class="drink-img">
         </div>
-
-        <div class="stars">★★★</div>
-        <div class="side-text right">ꦮꦺꦢꦁ ꦱꦼꦂꦸꦤꦶ</div>
       </div>
+
+
 
       <!-- JAHE -->
       <div class="circle-card coklat">
-        <div class="side-text left">ꦮꦺꦢꦁ ꦈꦮꦸꦃ</div>
-        <h2 class="title-olahan">WEDANG JAHE</h2>
+
+        <!-- TOP CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="top-jahe"
+            d="M 25 220 A 175 175 0 0 1 375 200"
+            fill="none" />
+          <text font-size="30" font-weight="bold">
+            <textPath href="#top-jahe" startOffset="50%" text-anchor="middle">
+              WEDANG JAHE
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- LEFT CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="left-jahe"
+            d="M 180 25 A 175 175 0 0 0 200 375"
+            fill="none" />
+          <text font-size="30">
+            <textPath href="#left-jahe" startOffset="50%" text-anchor="middle">
+              ꦮꦺꦢꦁ ꦈꦮꦸꦃ
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- RIGHT CURVE -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="right-jahe"
+            d="M 180 25 A 175 175 0 0 1 200 375"
+            fill="none" />
+          <text font-size="30">
+            <textPath href="#right-jahe" startOffset="50%" text-anchor="middle">
+              ꦮꦺꦢꦁ ꦈꦮꦸꦃ
+            </textPath>
+          </text>
+        </svg>
+
+        <!-- BOTTOM STARS -->
+        <svg class="curve" viewBox="0 0 400 400">
+          <path id="bottom-jahe"
+            d="M 20 220 A 175 175 0 0 0 375 200"
+            fill="none" />
+          <text font-size="40" fill="gold">
+            <textPath href="#bottom-jahe" startOffset="50%" text-anchor="middle">
+              ★★★
+            </textPath>
+          </text>
+        </svg>
 
         <div class="inner-circle-jahe">
           <img src="image/jahe.png" class="drink-img">
         </div>
-
-        <div class="stars">★★★</div>
-        <div class="side-text right">ꦮꦺꦢꦁ ꦈꦮꦸꦃ</div>
       </div>
     </div>
 
